fix(building jobs):
- fixed a bug where a freshly started job won't progress on the building properties window
- fixed a bug where a next job in queue won't progress after the previous job is stopped or finished